--- a/public/css/modify_default_property.css
+++ b/public/css/modify_default_property.css
@@ -3,6 +3,7 @@ a{
     font-weight: bold;
     text-decoration:none;
     transition: 0.1s;
+    cursor: pointer;
 }
 a:hover{
     color: var(--font_black);
