--- a/public/css/default_color.css
+++ b/public/css/default_color.css
@@ -1,12 +1,16 @@
+/*
+Global color
+全局颜色设定
+*/
 :root {
-    --div_white:#ffffff;
-    --bg_white:#fcfcfc;
-    --button_color_blue:#5359fd;
-    --font_black:#19191a;
-    --font_gray:#8b8c8f;
-    --box-shadow-blue:#edecfa;
+    --color-div_white:#ffffff;
+    --color-bg_white:#fcfcfc;
+    --color-button_color_blue:#5359fd;
+    --color-font_black:#19191a;
+    --color-font_gray:#8b8c8f;
+    --color-box-shadow-blue:#edecfa;
 
-    --a-normal-gray:#8b8c8f;
+    --color-a-normal-gray:#8b8c8f;
 
-    --input-bgnormal-gray:#f7f7f9;
+    --color-input-bgnormal-gray:#f7f7f9;
 }
