--- a/public/css/modify_default_property.css
+++ b/public/css/modify_default_property.css
@@ -1,10 +1,10 @@
 a{
-    color: var(--a-normal-gray);
+    color: var(--color-a-normal-gray);
     font-weight: bold;
     text-decoration:none;
     transition: 0.1s;
     cursor: pointer;
 }
 a:hover{
-    color: var(--font_black);
+    color: var(--color-font_black);
 }
