--- a/public/css/display_style.css
+++ b/public/css/display_style.css
@@ -1,11 +1,9 @@
 /*
 Global style
 全局样式设定
-    包括：字体,面板大小，字体大小
+    包括：面板大小
 */
 :root{
-    --fontSize-Welcome-panel-top:1.6rem;
-
     --area-Welcome-panel-width:30rem;
     --area-Welcome-panel-height-login:30rem;
     --area-Welcome-panel-height-register: 34rem;
