--- a/public/css/font_style.css
+++ b/public/css/font_style.css
@@ -1,3 +1,10 @@
+:root{
+    --fontSize-Welcome-panel-top:1.6rem;
+
+    --fontSize-Main-panel-mainMessageTitle-Chinese:4.6rem;
+    --fontSize-Main-panel-mainMessageTitle-English:1.6rem
+}
+
 *{
     font-family: 小米兰亭;
 }
