主页面基础设计布局优化

--- a/public/css/display_style.css
+++ b/public/css/display_style.css
@@ -18,3 +18,9 @@ Global style
     justify-content: center;
     align-items: center;
 }
+
+.test_box{
+    width: 500px;
+    height: 500px;
+    background: blueviolet;
+}
