--- a/public/css/modify_default_property.css
+++ b/public/css/modify_default_property.css
@@ -1,5 +1,5 @@
 a{
-    color: var(--color-a-normal-gray);
+    color: var(--color-a-normal_gray);
     font-weight: bold;
     text-decoration:none;
     transition: 0.1s;
