--- a/public/css/animation.css
+++ b/public/css/animation.css
@@ -45,12 +45,13 @@
     
 }
 
-@keyframes main_ID_float {
-    0%{
-        position: relative;
-    }
-    100%{
-        position: relative;
-        margin-top: 1rem;
-    }
+.bottomUp_End {
+    transform: translateY(0%) !important;
+    opacity: 1 !important;
+    transition: all 2s ease;
+}
+
+.bottomUp_Start {
+    transform: translateY(10%);
+    opacity: 0;
 }
