--- a/public/css/default_color.css
+++ b/public/css/default_color.css
@@ -9,7 +9,8 @@ Global color
     --color-font_black:#19191a;
     --color-font_gray:#8b8c8f;
     --color-box-shadow_blue:#edecfa;
-
+    --color-secondPanel-bg_white:#f0f4f8;
+    --color-secondPanel-bg_blue:#2b199e ;
     --color-a-normal_gray:#8b8c8f;
 
     --color-input-bgnormal_gray:#f7f7f9;
