--- a/public/css/display_style.css
+++ b/public/css/display_style.css
@@ -14,7 +14,7 @@ img:not([src]){opacity:0;}
 *{
     margin: 0;
     padding: 0;
-    list-style: none;
+    /*list-style: none;*/
 }
 body{
     /*margin:0px 10px;*/
