--- a/public/css/default_color.css
+++ b/public/css/default_color.css
@@ -14,6 +14,9 @@ Global color
     --color-a-normal_gray:#8b8c8f;
 
     --color-input-bgnormal_gray:#f7f7f9;
+
+    --color-musicPanel-bg_black:#2b2b2b;
+    --color-musicPanel-bgFont_black:#3b3b3b;
 }
 
 body{
