[1.2bate] 完成了function页面设计与功能
待完成：
设计网站和导航
修改主页面排版问题

--- a/public/css/default_color.css
+++ b/public/css/default_color.css
@@ -12,6 +12,7 @@ Global color
     --color-secondPanel-bg_white:#f0f4f8;
     --color-secondPanel-bg_blue:#2b199e ;
     --color-a-normal_gray:#8b8c8f;
+    --color-musicPanel-bg_blue:#90a1d4 ;
 
     --color-input-bgnormal_gray:#f7f7f9;
 
