--- a/public/css/default_color.css
+++ b/public/css/default_color.css
@@ -7,6 +7,8 @@ Global color
     --color-bg_white:#fcfcfc;
     --color-button_color_blue:#2b199e;
     --color-button_color_hover_blue:#5359fd;
+    --color-topSidebar-shadow_blue:#b1b9ff;
+    --color-topSidebar-li_blue:#4131a8;
 
     --color-font_black:#19191a;
     --color-font_gray:#8b8c8f;
