--- a/public/css/animation.css
+++ b/public/css/animation.css
@@ -1,3 +1,4 @@
+/*面板动画实现*/
 @keyframes panel_change_leave {
     0% {
         position: absolute;
@@ -92,4 +93,21 @@
 }
 .topSidebar_bg_none{
     background: none;
+}
+
+
+@keyframes rotation_font_move {
+    0%{
+        /*margin-top: 30px;*/
+        filter: blur(5px);
+        margin-bottom: 20px;
+    }
+    50%{
+        opacity: 1.5 !important;
+        color:  var(--color-button_color_hover_blue);
+        filter: blur(1px);
+    }
+    100%{
+        filter: brightness(1);
+    }
 }
